--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
 html, body {
     height: 100%;
     width: 100%;
+    padding: 0;
+    margin: 0;
     background: skyblue;
+}
+h1 {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    background: url("./IMG_6197.JPG") no-repeat;
+    background-size: contain;
 }
