--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ html, body {
     width: 100%;
     padding: 0;
     margin: 0;
-    background: skyblue;
+    background: aliceblue;
 }
 h1 {
     padding: 0;
